@@ -207,4 +207,7 @@ Rename = Changer de nom
 Language = Language
 Key = Clé :
 RenKey = Changer la clé
+InvKey = Clé invalide.
+DupKey = Clé déjà présente dans la bibliothèque.
+SpaceKey = La clé ne peut pas contenir des espaces.
 SnapToGridOrigin = Origine bloquée sur la grille
