@@ -207,4 +207,7 @@ Rename = Rinomina
 Language = Lingua
 Key = Chiave:
 RenKey = Cambia chiave
+InvKey = Chiave invalida.
+DupKey = La chiave specificata è già in uso nella libreria.
+SpaceKey = La chiave non deve contenere spazi.
 SnapToGridOrigin = Blocca origine su griglia
